--- a/client/src/css/questions.css
+++ b/client/src/css/questions.css
@@ -44,12 +44,14 @@
 
 .pStart {
   font-size: 25px;
+  color: black;
 }
 
 .pStart1 {
   margin: 0 auto;
   font-size: 70px;
   width: 600px;
+  color: black;
 }
 
 .butStart {
